--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,6 @@
+/* The following line can be included in your src/index.js or App.js file */
+@import '~leaflet/dist/leaflet.css';
+
 body {
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
